# VoIP

./: CMakeLists.txt  CompressionAlgorithm.cpp  PlaybackAudio  PlaybackAudio.cpp  PortAudioCallbacks.cpp  ReadMe.md  ReceiveVideo  ReceiveVideo.cpp  Receiver  Receiver.cpp  RecordAudio.cpp  RecordVideo  RecordVideo.cpp  RecordVoice.cpp  Sender  Sender.c  Sender.cpp  ServerScript.cpp  VideoAndVoiceHandler  VideoAndVoiceHandler.cpp  VoiceOverIp  a.out  audioOut.py  build_voip.sh  client  client.c  client.h  main  makefile  server  server.c  server.cpp
